assets/css/style.css
html {
    height: 100%;
}

body {
    background-image: url(../images/vintage-concrete.png);
    /* style="background-image: url('images/vintage-concrete.png')" */
    display: flex;
    flex-direction: column;
    height: 100%;
}

.wrapper {
    flex: 1 0 auto;
}

.navbar, .navbar-expand-lg, .navbar-light, .bg-light {
    padding-top: 0%;
    padding-bottom: 0%;
    /* style="padding-top: 0%; padding-bottom: 0%" */
}

.navbar-light .navbar-brand {
    /* style="color: #ffffff; background-color: #4aaaa5; font-family: 'Georgia', Times, Times New Roman, serif; padding: 1%; font-size: 24px" */
    color: #ffffff;
    background-color: #4aaaa5; 
    font-family: 'Georgia', Times, Times New Roman, serif;
    padding: 1%;
    font-size: 24px;
}

.jumbotron, container {
    margin-top: 2%;
    padding-top: 0%;
    background-color: #ffffff;
    /* style="margin-top: 2%; padding-top: 0%; background-color: #ffffff" */
}

h1 {
    /* style="color: #4aaaa5; font-family: 'Georgia', Times, Times New Roman, serif; font-size: 24px; margin: 2% 0% 0% 2%" */
    color: #4aaaa5;
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 24px;
    margin: 2% 0% 0% 2%;
}

.my-4 {
    /* style="border-width: 3px" */
    border-width: 3px;
}

footer {
    height: 3.25rem;
    width: 100%;
    background-color: #666666;
    border-top: .75rem solid #4aaaa5;
    flex-shrink: 0;
}

.btn, .btn-primary {
    background-color: #4aaaa5;
    border: none;
}

.thumbnail {
    margin-bottom: 10%;
    margin-right: 10%;
    position: relative;
}

.post-content {
    width: 100%;
    background-color: #4aaaa5;
    color: #ffffff;
    position: absolute;
    top: 60%;
}

